--- a/src/style.css
+++ b/src/style.css
@@ -2967,11 +2967,21 @@ border-bottom: 3px solid #4b6cb7;
     .product_wrap .count_wrap, .product_wrap .neeedsbtn, .productwrap1 .count_wrap, .productwrap1 .neeedsbtn{
         margin-right: 5px;
     }
+    .sbtnwrap{
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .subtitle{
+        font-size: 16px !important
+    }
+    .textwrap>p{
+        font-size: 14px;
+    }
     .breacrumb{
         padding: 5px 0;
     }
     .pageTbox .pagetitle{
-    
+        margin-bottom: 10px;
         font-weight: 500;
         font-size: 20px;
     }
@@ -3033,6 +3043,9 @@ border-bottom: 3px solid #4b6cb7;
     font-weight: bold;
     border-radius: 1px;
     }
+    .pagesub{
+        line-height: unset !important;
+    }
     .faqnavi button span{
         font-size: 14px;
     }
@@ -3040,7 +3053,7 @@ border-bottom: 3px solid #4b6cb7;
         border: 1px solid #4b6cb7;
     }
    .mobile .btnstyle {
-    width: 60px;
+    width: 60px !important;
     height: 25px;
     line-height: 25px;
     font-size: 12px;
@@ -3097,10 +3110,31 @@ border-bottom: 3px solid #4b6cb7;
     .totalp_wrap{
         width: calc(100% - 20px);
     }
+    .tableT{
+        font-size: 16px;
+        width: 100px;
+    }
+    .tableD{
+        font-size: 14px;
+        width: calc(100% - 100px);
+    }
+   
   }
   /* 모바일 */
 
   @media screen and (max-width: 720px) {
+    .tableT{
+        font-size: 14px;
+    }
+    .tableD{
+        font-size: 14px;
+    }
+    .subtitle{
+        font-size: 14px !important
+    }
+    .textwrap>p{
+        font-size: 12px;
+    }
     .pro_d_wrap p {
         font-size: 12px;
     }
