--- a/src/style.css
+++ b/src/style.css
@@ -412,7 +412,7 @@ height: 100%;
     align-items: center;
     justify-content: space-between;
 }
-.ant-popover-arrow{
+.searchpop  .ant-popover-arrow{
     display: none !important;
 }
 .search_bar{
@@ -426,12 +426,12 @@ height: 100%;
     font-size: 20px;
     font-weight: 900;
 }
-.ant-popover-inner{
+.searchpop .ant-popover-inner{
 
     border-radius:0px !important;  
 }
-.ant-popover {
-    width: 720px;
+.ant-popover.searchpop  {
+    width: 720px !important;
     left: 50% !important;
     transform: translate(-50%,0) !important;
     top: 120px !important;
@@ -2599,6 +2599,8 @@ border-bottom: 3px solid #4b6cb7;
     padding: 10px 0px;
 }
 .ant-anchor .ant-anchor-link{
+    height: 40px;
+    line-height: 40px;
     width: 20%;
     font-size: 16px ;
     font-weight: bold;
@@ -2627,6 +2629,7 @@ border-bottom: 3px solid #4b6cb7;
     width: 100%;
     border-radius: 0px;
     border:1px solid #4b6cb7; ;
+    padding: 0 !important;
 }
 .tabled{
     width: calc(100% - 110px);
